--- a/style.css
+++ b/style.css
@@ -84,6 +84,20 @@ padding-top: 10vh;
 padding-bottom: 10vh;
 }
 
+.gallery{
+background: #f4f4f4;
+text-align: center;
+padding-left: 5vw;
+padding-right: 5vw;
+padding-top: 10vh;
+padding-bottom: 10vh;
+}
+
+.img:hover{
+	width: 100%;
+	height: 100%;
+}
+
 /* CTA Styles */
 .cta {
 background: #333;
