--- a/style.css
+++ b/style.css
@@ -92,10 +92,19 @@ padding-right: 5vw;
 padding-top: 10vh;
 padding-bottom: 10vh;
 }
+.gallery > .container{
+	display: flex;
+	justify-content: start;
+	flex-direction: row;
+}
+.img{
+	height:30%; 
+	width: 30%;
+}
 
 .img:hover{
-	width: 100%;
-	height: 100%;
+	height: 35%;
+	width: 35%;
 }
 
 /* CTA Styles */
